--- a/app/src/main/res/layout/activity_album_details.xml
+++ b/app/src/main/res/layout/activity_album_details.xml
@@ -8,26 +8,26 @@
     android:background="@drawable/emo">
 
     <ListView
-        android:id="@+id/albumSongList"
+        android:id="@+id/albumListView"
         android:layout_width="406dp"
         android:layout_height="320dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/albumImg" />
+        app:layout_constraintTop_toBottomOf="@+id/albumImageView" />
 
     <ImageView
-        android:id="@+id/albumImg"
+        android:id="@+id/albumImageView"
         android:layout_width="285dp"
         android:layout_height="294dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/albumNameTxt"
+        app:layout_constraintTop_toBottomOf="@+id/albumTextView"
         app:srcCompat="@drawable/black_parade" />
 
     <TextView
-        android:id="@+id/albumNameTxt"
+        android:id="@+id/albumTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
