--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/add_to_queue"
+        android:id="@+id/add_to_playlist"
         android:title="Add to PlayList">
+    </item>
+    <item
+        android:id="@+id/remove_from_playlist"
+        android:title="Remove from Playlist">
+
     </item>
 </menu>
